# bevy_ads_admob_ios

./: .gitignore  Cargo.toml  Package.swift  README.md  build.rs  justfile
.github/workflows/: cd.yml
AdmobXcframework.xcframework/: Info.plist
AdmobXcframework.xcframework/ios-arm64/Headers/: bevy_ads_admob_ios.h  module.modulemap
Sources/bevy_ads_admob/: AdMobManager.swift
Sources/bevy_ads_admob_ios/: AdMobManager.swift  SwiftBridgeCore.swift  bevy_ads_admob_ios.swift
crates/bevy_ads_common/: Cargo.toml
crates/bevy_ads_common/src/: fake_ads.rs  lib.rs
src/: lib.rs  native.rs
