[package]
name = "bevy_ads_admob_ios"
version = "0.1.0"
edition = "2024"
authors = ["Piotr Siuszko"]
keywords = ["bevy", "ads", "mobile", "admob"]
description = "Bevy Admob integration for iOS"
homepage = "https://github.com/CrayenDev/bevy_ads_admob_ios"
repository = "https://github.com/CrayenDev/bevy_ads_admob_ios"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["staticlib", "rlib"]

[dependencies]
bevy_ads_common = { default-features = false, version = "0.2.0" }
serde = {version = "1.0.152", features = ["derive"]}
bevy_app = { version = "0.17.0" }
bevy_ecs = { version = "0.17.0" }
bevy_reflect = { version = "0.17.0" }
bevy_derive = { version = "0.17.0" }
bevy_log = { version = "0.17.0" }
swift-bridge = "0.1"

[build-dependencies]
swift-bridge-build = "0.1"
