[package]
name = "bevy_ads_common"
version = "0.1.0"
edition = "2024"

[features]
default = []
fake_ads = []

[dependencies]
serde = {version = "1.0.152", features = ["derive"]}
bevy_app = { version = "0.17.0" }
bevy_ecs = { version = "0.17.0" }
bevy_reflect = { version = "0.17.0" }
bevy_derive = { version = "0.17.0" }
bevy_log = { version = "0.17.0" }
once_cell = "1"
crossbeam = "0.8"
